--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,72 @@
+@import url('https://fonts.googleapis.com/css?family=Saira+Extra+Condensed');
+
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: Poppins;
   font-size: 16px;
   margin-top: 20px;
   margin-left: 20px;
+  letter-spacing: 1px;
 }
 
 a {
+  position: relative;
+  /* padding: 1rem 0 0.5rem;
+    margin: 0 1.5rem; */
+  color: #000;
   text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+}
+
+a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+a:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 label {
@@ -72,4 +132,29 @@ p {
 
 .forms {
   margin-left: 150px;
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.iphone_mock {
+  width: 300px;
+  height: auto;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
+#number_banner {
+  font-size: 28px;
+}
+
+#showcase_last {
+  padding: 5rem 0 5rem;
+  margin: 0 1.5rem;
 }
