--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,7 @@ body {
 
 a {
   position: relative;
+  font-family: Poppins;
   /* padding: 1rem 0 0.5rem;
     margin: 0 1.5rem; */
   color: #000;
@@ -75,7 +76,7 @@ label {
 
 nav a {
   display: inline-block;
-  margin: 1em;
+  margin: 0.4em;
 }
 
 form div {
@@ -105,7 +106,9 @@ p {
 }
 
 .navbar-brand {
-  font-size: 32px;
+  font-size: 42px !important;
+  font-family: 'Josefin Sans';
+  color: #101357 !important;
 }
 
 #showcase {
@@ -138,6 +141,7 @@ p {
   position: relative;
   display: flex;
   justify-content: center;
+  color: #101357;
 }
 
 .iphone_mock {
@@ -154,7 +158,12 @@ p {
   font-size: 28px;
 }
 
+#showcase_first {
+  padding: 4rem 4rem;
+  margin: 1.5 1.5rem;
+}
+
 #showcase_last {
-  padding: 5rem 0 5rem;
+  padding: 5 rem 0 5rem;
   margin: 0 1.5rem;
 }
